--- a/less/global.less
+++ b/less/global.less
@@ -33,6 +33,9 @@ html {
   @media @mobile {
     padding-top: 5em;
   }
+  @media @tablet {
+    padding-top: 5em;
+  }
 }
 
 h1 {
@@ -46,6 +49,9 @@ h1 {
   font-size: 8em;
   color: @whiskey;
   @media @mobile {
+    font-size: 3em;
+  }
+  @media @tablet {
     font-size: 3em;
   }
 }
