--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,10 +15,14 @@ body {
       position: static;
       margin-top: 10%;
     }
+    @media @tablet {
+      position: static;
+      margin-top: 10%;
+    }
     nav {
       margin: 0 auto;
-      padding-top: 3%;
-      width: 90%;
+      padding-top: 10%;
+      width: 95%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -27,10 +31,14 @@ body {
         width: 100%;
         margin-top: 10%;
       }
+      @media @tablet {
+        width: 100%;
+        margin-top: 10%;
+      }
       .logo img {
         background-color: @whiskey;
-        height: 25em;
-        width: 25em;
+        height: 22em;
+        width: 22em;
         display: flex;
         @media @mobile {
           margin-left: 5%;
@@ -39,11 +47,15 @@ body {
         }
       }
       .navbuttons {
+        justify-content: center;
         display: flex;
         flex-direction: column;
-        margin-top: 3%;
+        margin-bottom: 2%;
         margin-right: 2%;
         @media @mobile {
+          margin: 1% 2%;
+        }
+        @media @tablet {
           margin: 1% 2%;
         }
         a {
@@ -81,6 +93,12 @@ body {
             padding: 0.35em;
             font-size: 1em;
           }
+          @media @tablet {
+            height: 2em;
+            margin: 1% 1%;
+            padding: 0.35em;
+            font-size: 1em;
+          }
         }
       }
     }
@@ -98,7 +116,7 @@ body {
       width: 50%;
     }
     button {
-      margin-top: 2em;
+      margin-bottom: 2em;
       height: 3em;
       width: 60%;
       box-shadow: 4px 4px 0px -1px #43260f;
@@ -125,6 +143,10 @@ body {
         font-size: 2em;
         margin-top: 0;
       }
+      @media @tablet {
+        font-size: 2em;
+        margin-top: 0;
+      }
     }
   }
 
@@ -133,6 +155,9 @@ body {
     font-size: 3.4em;
     color: @asphalt;
     @media @mobile {
+      font-size: 2.2em;
+    }
+    @media @tablet {
       font-size: 2.2em;
     }
   }
@@ -147,10 +172,13 @@ body {
   margin: 0 auto;
   .main {
     margin: 0 auto 5%;
-    width: 80%;
+    width: 70%;
     height: 100%;
     background-color: @deepOak;
     @media @mobile {
+      width: 100%;
+    }
+    @media @tablet {
       width: 100%;
     }
     .dish {
@@ -163,12 +191,18 @@ body {
       @media @mobile {
         width: 80%;
       }
+      @media @tablet {
+        width: 80%;
+      }
       img {
         border-left: 15px solid @whiskey;
         border-right: 15px solid @whiskey;
         border-bottom: 25px solid @whiskey;
         width: 70%;
         @media @mobile {
+          width: 100%;
+        }
+        @media @tablet {
           width: 100%;
         }
       }
@@ -180,6 +214,9 @@ body {
         padding: 20px;
         width: 70%;
         @media @mobile {
+          width: 100%;
+        }
+        @media @tablet {
           width: 100%;
         }
       }
@@ -228,6 +265,9 @@ body {
     @media @mobile {
       font-size: 2em;
     }
+    @media @tablet {
+      font-size: 2em;
+    }
   }
 }
 
@@ -239,6 +279,9 @@ footer {
   height: 15em;
   background-color: rgba(17, 9, 6, 0.8);
   @media @mobile {
+    height: 8em;
+  }
+  @media @tablet {
     height: 8em;
   }
 }
@@ -254,6 +297,9 @@ footer p {
   text-align: center;
   font-size: 6em;
   @media @mobile {
+    font-size: 3em;
+  }
+  @media @tablet {
     font-size: 3em;
   }
 }
